Fix footer background on small viewports

--- a/landing-styleshit.css
+++ b/landing-styleshit.css
@@ -3,7 +3,7 @@ ThatStella7922 Landing Website Stylesheet
 
 mreowww :3
 
-v2023.1119.0
+v2023.1127.1
 */
 
 /* small css reset because something was causing issues and im too dumb to figure out what it was */
@@ -199,7 +199,7 @@ footer {
     background-color: #1a1a1a;
 }
 #footer-sidebyside {
-    display: block;
+    display: inline-block;
 }
 
 /* Twemoji sizing */
